MATP-966 Develop Complete Open Source Offering
git-svn-id: file:///space/source.marketcetera.org/root/branches/3.1.x@17452 501a4a96-914b-0410-8454-f5988a4ca596